--- a/package.json
+++ b/package.json
@@ -26,20 +26,22 @@
     "prepublishOnly": "npm run dist"
   },
   "dependencies": {
-    "change-case": "3.0.1"
+    "change-case": "3.0.1",
+    "lodash.merge": "4.6.0"
   },
   "optionalDependencies": {
     "js-yaml": "3.8.4",
     "minimist": "1.2.0"
   },
   "devDependencies": {
-    "@types/jest": "19.2.4",
+    "@types/jest": "20.0.2",
+    "@types/lodash.merge": "4.6.2",
     "@types/minimist": "1.2.0",
-    "@types/node": "7.0.28",
+    "@types/node": "8.0.3",
     "jest": "20.0.4",
-    "prettier": "1.4.2",
+    "prettier": "1.4.4",
     "rimraf": "2.6.1",
-    "ts-jest": "20.0.5",
+    "ts-jest": "20.0.6",
     "tslint": "5.4.3",
     "typescript": "2.3.4"
   },
