--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "dependencies": {
     "camel-case": "^3.0.0",
     "constant-case": "^2.0.0",
-    "lodash.merge": "4.6.1"
+    "lodash.merge": "^4.6.1"
   },
   "optionalDependencies": {
     "js-yaml": "^3.10.0",
