--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "typeconf",
   "version": "0.6.1",
   "description": "A typesafe hierarchical configuration manager for Node.js and the browser.",
-  "browser": "dist/TypeConf.js",
+  "browser": "dist/TypeConfBrowser.js",
   "main": "dist/TypeConfNode.js",
   "types": "./dist/TypeConfNode.d.ts",
   "repository": "https://github.com/mfellner/typeconf",
