--- a/package.json
+++ b/package.json
@@ -35,20 +35,20 @@
     "lodash.merge": "^4.6.1"
   },
   "optionalDependencies": {
-    "js-yaml": "^3.10.0",
+    "js-yaml": "3.12.0",
     "minimist": "^1.2.0"
   },
   "devDependencies": {
-    "@types/jest": "22.1.3",
-    "@types/lodash.merge": "4.6.3",
+    "@types/jest": "23.3.1",
+    "@types/lodash.merge": "4.6.4",
     "@types/minimist": "1.2.0",
-    "@types/node": "9.4.6",
-    "jest": "22.4.2",
-    "prettier": "1.11.0",
+    "@types/node": "10.5.5",
+    "jest": "23.4.2",
+    "prettier": "1.14.0",
     "rimraf": "2.6.2",
-    "ts-jest": "22.4.0",
-    "tslint": "5.9.1",
-    "typescript": "2.7.2"
+    "ts-jest": "23.0.1",
+    "tslint": "5.11.0",
+    "typescript": "3.0.1"
   },
   "jest": {
     "testEnvironment": "node",
